[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["TM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
httpx = "^0.28.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
python-json-logger = "^2.0.7"
cachetools = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
